@@ -1,3 +1,9 @@
+2009-07-10  Marcus Meissner  <marcus@jet.franken.de>
+
+	* ptp.c,ptp.h: Generic PTP wrapper function (no data, no output)
+	  to avoid coding all generic functions as seperate functions.
+	  Started converting functions to macros.
+
 2009-07-09  Axel Waggershauser <awagger@web.de>                                                                                    
 	* ptp.c: Some sprintf format adjustments.
 	* ptp.h: EOS_RemoteRelease doc comments.
